--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,100 @@
-Flask
-gunicorn
+ayatana-settings==21.1.28
+bcrypt==3.2.0
+beautifulsoup4==4.10.0
+blinker==1.9.0
+Brlapi==0.8.3
+cajarename==21.11.24
+cclib==1.6.2
+certifi==2020.6.20
+chardet==4.0.0
+chrome-gnome-shell==0.0.0
+click==8.1.8
+colorama==0.4.4
+command-not-found==0.3
+cryptography==3.4.8
+cupshelpers==1.0
+dbus-python==1.2.18
+defer==1.0.6
+deja-dup-caja==0.0.9
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+duplicity==0.8.21
+evdev==1.4.0
+fasteners==0.14.1
+Flask==3.1.0
+folder-color-caja==0.0.86
+folder-color-common==0.0.86
+future==0.18.2
+gpg==1.16.0
+html5lib==1.1
+httplib2==0.20.2
+idna==3.3
+importlib-metadata==4.6.4
+itsdangerous==2.2.0
+jeepney==0.7.1
+Jinja2==3.1.6
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.20.0
+lxml==4.8.0
+macaroonbakery==1.3.1
+Magnus==1.0.3
+Mako==1.1.3
+MarkupSafe==3.0.2
+mate-hud==22.4.4
+mate-tweak==22.4.8
+monotonic==1.6
+more-itertools==8.10.0
+netifaces==0.11.0
+numpy==1.21.5
+oauthlib==3.2.0
+olefile==0.46
+onboard==1.4.1
+paramiko==2.9.3
+pexpect==4.8.0
+Pillow==9.0.1
+protobuf==3.12.4
+psutil==5.9.0
+ptyprocess==0.7.0
+pulsemixer==1.5.1
+pycairo==1.20.1
+pycryptodomex==3.11.0
+pycups==2.0.1
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+python-apt==2.4.0+ubuntu4
+python-dateutil==2.8.1
+python-debian==0.1.43+ubuntu1.1
+python-magic==0.4.24
+python-xlib==0.29
+pytz==2022.1
+pyxattr==0.7.2
+pyxdg==0.27
+PyYAML==5.4.1
+reportlab==3.6.8
+requests==2.25.1
+SecretStorage==3.3.1
+setproctitle==1.2.2
+six==1.16.0
+soupsieve==2.3.1
+systemd-python==234
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.5
+wadllib==1.3.6
+webencodings==0.5.1
+Werkzeug==3.1.3
+xdg==5
+xkit==0.0.0
+youtube-dl==2021.12.17
+zipp==1.0.0
